package lld.chessgame;

public enum PieceColor {
    BLACK, WHITE
}
