package lld.chessgame;

public enum PieceType {
    KING, QUEEN, BISHOP, KNIGHT, ROOK, PAWN
}
