package lld.chessgame;

public class Position {
    int row, col;

    //Constructor
    public Position(int row, int col) {
        this.row = row;
        this.col = col;
    }

}
